@@ -40,86 +40,9 @@ public class SaltWaterSurface extends WaterSurface
 	}
 	protected String UnderWaterLocaleID(){return "UnderSaltWaterGrid";}
 
-
 	public int liquidType(){return RawMaterial.RESOURCE_SALTWATER;}
+	protected int UnderWaterDomainType(){return Room.DOMAIN_OUTDOORS_UNDERWATER;}
+	protected boolean IsUnderWaterFatClass(Room thatSea){return (thatSea instanceof UnderSaltWaterGrid)||(thatSea instanceof UnderSaltWaterThinGrid);}
 	public List<Integer> resourceChoices(){return UnderSaltWater.roomResources;}
-
-	public void giveASky(int depth)
-	{
-		if(skyedYet) return;
-		if(depth>1000) return;
-		super.giveASky(depth+1);
-		skyedYet=true;
-		
-		if((roomID().length()==0)
-		&&(getGridParent()!=null)
-		&&(getGridParent().roomID().length()==0))
-			return;
-		
-		if((rawDoors()[Directions.DOWN]==null)
-		&&((domainType()&Room.INDOORS)==0)
-		&&(domainType()!=Room.DOMAIN_OUTDOORS_UNDERWATER)
-		&&(domainType()!=Room.DOMAIN_OUTDOORS_AIR)
-		&&(CMProps.getIntVar(CMProps.Int.SKYSIZE)!=0))
-		{
-			Exit dnE=null;
-			Exit upE=CMClass.getExit("StdOpenDoorway");
-			if(CMProps.getIntVar(CMProps.Int.SKYSIZE)>0)
-				dnE=upE;
-			else
-				dnE=CMClass.getExit("UnseenWalkway");
-			GridLocale sea=(GridLocale)CMClass.getLocale(UnderWaterLocaleID());
-			sea.setRoomID("");
-			sea.setArea(getArea());
-			rawDoors()[Directions.DOWN]=sea;
-			setRawExit(Directions.DOWN,dnE);
-			sea.rawDoors()[Directions.UP]=this;
-			sea.setRawExit(Directions.UP,upE);
-			for(int d=0;d<4;d++)
-			{
-				Room thatRoom=rawDoors()[d];
-				Room thatSea=null;
-				if((thatRoom!=null)&&(getRawExit(d)!=null))
-				{
-					thatRoom.giveASky(depth+1);
-					thatSea=thatRoom.rawDoors()[Directions.DOWN];
-				}
-				if((thatSea!=null)
-				   &&(thatSea.roomID().length()==0)
-				   &&((thatSea instanceof UnderSaltWaterGrid)||(thatSea instanceof UnderSaltWaterThinGrid)))
-				{
-					sea.rawDoors()[d]=thatSea;
-					sea.setRawExit(d,getRawExit(d));
-					thatSea.rawDoors()[Directions.getOpDirectionCode(d)]=sea;
-					if(thatRoom!=null)
-					{
-						Exit xo=thatRoom.getRawExit(Directions.getOpDirectionCode(d));
-						if((xo==null)||(xo.hasADoor())) xo=upE;
-						thatSea.setRawExit(Directions.getOpDirectionCode(d),xo);
-					}
-					((GridLocale)thatSea).clearGrid(null);
-				}
-			}
-			sea.clearGrid(null);
-		}
-	}
-
-	public void clearSky()
-	{
-		if(!skyedYet) return;
-		super.clearSky();
-		Room room=rawDoors()[Directions.DOWN];
-		if(room==null) return;
-		if((room.roomID().length()==0)
-		&&((room instanceof UnderSaltWaterGrid)||(room instanceof UnderSaltWaterThinGrid)))
-		{
-			((GridLocale)room).clearGrid(null);
-			rawDoors()[Directions.UP]=null;
-			setRawExit(Directions.UP,null);
-			CMLib.map().emptyRoom(room,null);
-			room.destroy();
-			skyedYet=false;
-		}
-	}
 
 }
